--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Dashboard</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -18,6 +19,8 @@
                 <input type="text" class="search-box" placeholder="Search for Student Profile">
             </div>
         </div>
+
+        
     </div>
 </body>
 </html>
