--- a/filter-panel.html
+++ b/filter-panel.html
@@ -23,31 +23,32 @@
             <select id="batch">
                 <option>All Batches</option>
                 <option>2022-2026</option>
-                <!-- Add more options as required -->
+                <option>2023-2027</option>
             </select>
 
             <label for="department">Department</label>
             <select id="department">
                 <option>All Departments</option>
-                <!-- Add more options as required -->
+                <option>Information Technology</option>
+                <option>Civil Engineering</option>
             </select>
 
             <label for="quota">Quota</label>
             <select id="quota">
                 <option>Counselling</option>
-                <!-- Add more options as required -->
+                <option>Management</option>
             </select>
 
             <label for="companies">Number of companies attended</label>
             <select id="companies">
                 <option>Three</option>
-                <!-- Add more options as required -->
+                <option>Two</option>
             </select>
 
             <label for="marks">10th Mark percentage</label>
             <select id="marks">
                 <option>Above 80%</option>
-                <!-- Add more options as required -->
+               <option>Above 70%</option>
             </select>
 
             <button class="clear-button">Clear All</button>
