--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             console.log('Email: ' + profile.getEmail());
 
             // Redirect to dashboard page
-            window.location.href = 'dashboard.html';
+            window.location.href = '/dashboard.html';
         }
 
         function onFailure(error) {
