--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
 <body>
     <div class="login-container">
         <div class="google-signin-container">
-            <h2 class="dashboard-title">BIT Dashboard</h2>
-            <!-- Google Sign-In Button -->
-            <div class="g-signin2" id="googleSignInBtn"></div>
-            <p class="signin-instruction">Sign in with your organization mail id to access the dashboard</p>
+            <center><span>Welcome Back!</span></center>
+            <div class="bitsathyimg">
+                <img src="images/Bannari_Amman_Institute_of_Technology_logo.png" alt="">
+            </div>
+            <p class="signin-instruction">Sign in with your <span><b>Bitsathy Gmail</b></span></p>
+            <center><div class="g-signin2" id="googleSignInBtn"></div></center>
         </div>
     </div>
 
