--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
     <meta name="google-signin-client_id" content="158651131098-2607903rinkb0ubd39nslv4264of44rl.apps.googleusercontent.com">
 </head>
 <body>
+    <div class="wb">
+        <center><span id="w">Welcome Back!</span></center>
+    </div>
     <div class="login-container">
         <div class="google-signin-container">
-            <center><span>Welcome Back!</span></center>
             <div class="bitsathyimg">
                 <img src="images/Bannari_Amman_Institute_of_Technology_logo.png" alt="">
             </div>
