Made Some Changes In Icon

--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
                 <img src="images/Bannari_Amman_Institute_of_Technology_logo.png" alt="">
             </div>
             <p class="signin-instruction">Sign in with your <span><b>Bitsathy Gmail</b></span></p>
-            <center><div class="g-signin2" id="googleSignInBtn"></div></center>
+            <div class="gb">
+                <img src="images/google.png" height="25px" width="25px" alt=""><div class="sigin">Sign in</div>
+            </div>
+            <!-- <center><div class="g-signin2" id="googleSignInBtn"></div></center> -->
         </div>
     </div>
 
