--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             <p class="signin-instruction">Sign in with your <span><b>Bitsathy Gmail</b></span></p>
             <div class="gb">
                 <img src="images/google.png" height="25px" width="25px" alt=""><div class="sigin">Sign in</div>
+                <center><div class="g-signin2" id="googleSignInBtn"></div></center>
             </div>
-            <!-- <center><div class="g-signin2" id="googleSignInBtn"></div></center> -->
         </div>
     </div>
 
