--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
                 <img src="images/Bannari_Amman_Institute_of_Technology_logo.png" alt="">
             </div>
             <p class="signin-instruction">Sign in with your <span><b>Bitsathy Gmail</b></span></p>
-            <div class="gb">
+            <div class="gb" onclick="handleSignInClick()">
                 <img src="images/google.png" height="25px" width="25px" alt=""><div class="sigin">Sign in</div>
-                <center><div class="g-signin2" id="googleSignInBtn"></div></center>
+                <!-- <center><div class="g-signin2" id="googleSignInBtn"></div></center> -->
             </div>
         </div>
     </div>
@@ -28,6 +28,11 @@
     <!-- Load Google Platform library -->
     <script src="https://apis.google.com/js/platform.js" async defer></script>
     <script>
+        function handleSignInClick()
+        {
+            const auth2=gapi.auth2.getAuthInstance();
+            auth2.signIn().then(onSignIn).catch(onFailure)
+        }
         function onSignIn(googleUser) {
             // Get user profile information
             var profile = googleUser.getBasicProfile();
