Converted Dashboard To React

--- a/react-student-app/src/Login/dashboard.html
+++ b/react-student-app/src/Login/dashboard.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
     <div class="sidebar">
@@ -12,12 +12,15 @@
         <a href="index.html" class="active">Main Page</a>
         <a href="filter-panel.html">Filter Panel</a>
     </div>
+    
     <div class="content">
         <div class="header">
             <div class="search-container">
                 <input type="text" class="search-box" placeholder="Search for Student Profile">
             </div>
-        </div>        
+        </div>
+
+        
     </div>
 </body>
 </html>
