--- a/react-student-app/index.html
+++ b/react-student-app/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="png" href="/images/Bannari_Amman_Institute_of_Technology_logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>StudentDashboard</title>
   </head>
